// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/viewTitle hide description 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="ViewTitle"
    >
      <div
        class="MuiBox-root css-1qm1lh"
        data-test="board-title"
      >
        <div
          class="font-family-default css-1szvsd4"
        >
          <div
            class="page-controls MuiBox-root css-yybuv3"
          >
            <div
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1fkrnqp-MuiButtonBase-root-MuiListItemButton-root"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-i7wvoe-MuiSvgIcon-root"
                data-testid="EmojiEmotionsOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="15.5"
                  cy="9.5"
                  r="1.5"
                />
                <circle
                  cx="8.5"
                  cy="9.5"
                  r="1.5"
                />
                <path
                  d="M12 18c2.28 0 4.22-1.66 5-4H7c.78 2.34 2.72 4 5 4"
                />
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                />
              </svg>
              Add icon
            </div>
            <div
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1fkrnqp-MuiButtonBase-root-MuiListItemButton-root"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-i7wvoe-MuiSvgIcon-root"
                data-testid="ImageIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2M8.5 13.5l2.5 3.01L14.5 12l4.5 6H5z"
                />
              </svg>
              Add cover
            </div>
            <div
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1fkrnqp-MuiButtonBase-root-MuiListItemButton-root"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-icf95v-MuiSvgIcon-root"
                data-testid="VisibilityOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 6c3.79 0 7.17 2.13 8.82 5.5C19.17 14.87 15.79 17 12 17s-7.17-2.13-8.82-5.5C4.83 8.13 8.21 6 12 6m0-2C7 4 2.73 7.11 1 11.5 2.73 15.89 7 19 12 19s9.27-3.11 11-7.5C21.27 7.11 17 4 12 4m0 5c1.38 0 2.5 1.12 2.5 2.5S13.38 14 12 14s-2.5-1.12-2.5-2.5S10.62 9 12 9m0-2c-2.48 0-4.5 2.02-4.5 4.5S9.52 16 12 16s4.5-2.02 4.5-4.5S14.48 7 12 7"
                />
              </svg>
              show description
            </div>
          </div>
        </div>
        <input
          class="Editable css-unm2uj"
          placeholder="Untitled board"
          spellcheck="true"
          title="Page title"
          value="Page title"
        />
      </div>
    </div>
  </span>
</div>
`;

exports[`components/viewTitle should match snapshot 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="ViewTitle"
    >
      <div
        class="MuiBox-root css-1qm1lh"
        data-test="board-title"
      >
        <div
          class="font-family-default css-1szvsd4"
        >
          <div
            class="page-controls MuiBox-root css-yybuv3"
          >
            <div
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1fkrnqp-MuiButtonBase-root-MuiListItemButton-root"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-i7wvoe-MuiSvgIcon-root"
                data-testid="EmojiEmotionsOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="15.5"
                  cy="9.5"
                  r="1.5"
                />
                <circle
                  cx="8.5"
                  cy="9.5"
                  r="1.5"
                />
                <path
                  d="M12 18c2.28 0 4.22-1.66 5-4H7c.78 2.34 2.72 4 5 4"
                />
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                />
              </svg>
              Add icon
            </div>
            <div
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1fkrnqp-MuiButtonBase-root-MuiListItemButton-root"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-i7wvoe-MuiSvgIcon-root"
                data-testid="ImageIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2M8.5 13.5l2.5 3.01L14.5 12l4.5 6H5z"
                />
              </svg>
              Add cover
            </div>
            <div
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1fkrnqp-MuiButtonBase-root-MuiListItemButton-root"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-icf95v-MuiSvgIcon-root"
                data-testid="VisibilityOffOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 6c3.79 0 7.17 2.13 8.82 5.5-.59 1.22-1.42 2.27-2.41 3.12l1.41 1.41c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l1.65 1.65C10.66 6.09 11.32 6 12 6m-1.07 1.14L13 9.21c.57.25 1.03.71 1.28 1.28l2.07 2.07c.08-.34.14-.7.14-1.07C16.5 9.01 14.48 7 12 7c-.37 0-.72.05-1.07.14M2.01 3.87l2.68 2.68C3.06 7.83 1.77 9.53 1 11.5 2.73 15.89 7 19 12 19c1.52 0 2.98-.29 4.32-.82l3.42 3.42 1.41-1.41L3.42 2.45zm7.5 7.5 2.61 2.61c-.04.01-.08.02-.12.02-1.38 0-2.5-1.12-2.5-2.5 0-.05.01-.08.01-.13m-3.4-3.4 1.75 1.75c-.23.55-.36 1.15-.36 1.78 0 2.48 2.02 4.5 4.5 4.5.63 0 1.23-.13 1.77-.36l.98.98c-.88.24-1.8.38-2.75.38-3.79 0-7.17-2.13-8.82-5.5.7-1.43 1.72-2.61 2.93-3.53"
                />
              </svg>
              hide description
            </div>
          </div>
        </div>
        <input
          class="Editable css-unm2uj"
          placeholder="Untitled board"
          spellcheck="true"
          title="Page title"
          value="Page title"
        />
      </div>
      <div
        class="description"
      />
    </div>
  </span>
</div>
`;

exports[`components/viewTitle should match snapshot readonly 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="ViewTitle"
    >
      <div
        class="MuiBox-root css-1qm1lh"
        data-test="board-title"
      >
        <div
          class="font-family-default css-1szvsd4"
        >
          <div
            class="page-controls MuiBox-root css-yybuv3"
          >
            <div
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1fkrnqp-MuiButtonBase-root-MuiListItemButton-root"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-icf95v-MuiSvgIcon-root"
                data-testid="VisibilityOffOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 6c3.79 0 7.17 2.13 8.82 5.5-.59 1.22-1.42 2.27-2.41 3.12l1.41 1.41c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l1.65 1.65C10.66 6.09 11.32 6 12 6m-1.07 1.14L13 9.21c.57.25 1.03.71 1.28 1.28l2.07 2.07c.08-.34.14-.7.14-1.07C16.5 9.01 14.48 7 12 7c-.37 0-.72.05-1.07.14M2.01 3.87l2.68 2.68C3.06 7.83 1.77 9.53 1 11.5 2.73 15.89 7 19 12 19c1.52 0 2.98-.29 4.32-.82l3.42 3.42 1.41-1.41L3.42 2.45zm7.5 7.5 2.61 2.61c-.04.01-.08.02-.12.02-1.38 0-2.5-1.12-2.5-2.5 0-.05.01-.08.01-.13m-3.4-3.4 1.75 1.75c-.23.55-.36 1.15-.36 1.78 0 2.48 2.02 4.5 4.5 4.5.63 0 1.23-.13 1.77-.36l.98.98c-.88.24-1.8.38-2.75.38-3.79 0-7.17-2.13-8.82-5.5.7-1.43 1.72-2.61 2.93-3.53"
                />
              </svg>
              hide description
            </div>
          </div>
        </div>
        <input
          class="Editable readonly css-unm2uj"
          placeholder="Untitled board"
          readonly=""
          spellcheck="true"
          title="Page title"
          value="Page title"
        />
      </div>
      <div
        class="description"
      />
    </div>
  </span>
</div>
`;

exports[`components/viewTitle show description 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="ViewTitle"
    >
      <div
        class="MuiBox-root css-1qm1lh"
        data-test="board-title"
      >
        <div
          class="font-family-default css-1szvsd4"
        >
          <div
            class="page-controls MuiBox-root css-yybuv3"
          >
            <div
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1fkrnqp-MuiButtonBase-root-MuiListItemButton-root"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-i7wvoe-MuiSvgIcon-root"
                data-testid="EmojiEmotionsOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="15.5"
                  cy="9.5"
                  r="1.5"
                />
                <circle
                  cx="8.5"
                  cy="9.5"
                  r="1.5"
                />
                <path
                  d="M12 18c2.28 0 4.22-1.66 5-4H7c.78 2.34 2.72 4 5 4"
                />
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                />
              </svg>
              Add icon
            </div>
            <div
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1fkrnqp-MuiButtonBase-root-MuiListItemButton-root"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-i7wvoe-MuiSvgIcon-root"
                data-testid="ImageIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2M8.5 13.5l2.5 3.01L14.5 12l4.5 6H5z"
                />
              </svg>
              Add cover
            </div>
            <div
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1fkrnqp-MuiButtonBase-root-MuiListItemButton-root"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-icf95v-MuiSvgIcon-root"
                data-testid="VisibilityOffOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 6c3.79 0 7.17 2.13 8.82 5.5-.59 1.22-1.42 2.27-2.41 3.12l1.41 1.41c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l1.65 1.65C10.66 6.09 11.32 6 12 6m-1.07 1.14L13 9.21c.57.25 1.03.71 1.28 1.28l2.07 2.07c.08-.34.14-.7.14-1.07C16.5 9.01 14.48 7 12 7c-.37 0-.72.05-1.07.14M2.01 3.87l2.68 2.68C3.06 7.83 1.77 9.53 1 11.5 2.73 15.89 7 19 12 19c1.52 0 2.98-.29 4.32-.82l3.42 3.42 1.41-1.41L3.42 2.45zm7.5 7.5 2.61 2.61c-.04.01-.08.02-.12.02-1.38 0-2.5-1.12-2.5-2.5 0-.05.01-.08.01-.13m-3.4-3.4 1.75 1.75c-.23.55-.36 1.15-.36 1.78 0 2.48 2.02 4.5 4.5 4.5.63 0 1.23-.13 1.77-.36l.98.98c-.88.24-1.8.38-2.75.38-3.79 0-7.17-2.13-8.82-5.5.7-1.43 1.72-2.61 2.93-3.53"
                />
              </svg>
              hide description
            </div>
          </div>
        </div>
        <input
          class="Editable css-unm2uj"
          placeholder="Untitled board"
          spellcheck="true"
          title="Page title"
          value="Page title"
        />
      </div>
      <div
        class="description"
      />
    </div>
  </span>
</div>
`;
